# kata

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SCORING.md  benchmark-evaluation.md  deployment.md  evaluator-versioning.md  github-automation.md  gittensor-integration.md  milestones.md  sn60-early-stop.md  submissions.md  system-workflow.md  workflow.md
kata/: __init__.py  analyzers.py  ast_utils.py  baseline.py  benchmarks.py  challenge.py  cli.py  config.py  eval_pack.py  eval_runner.py  frontier.py  generator.py  live_progress.py  oracle.py  provenance.py  reporting.py  repository.py  scoring.py  screening.py  sn60_model_relay.py  submissions.py  util.py
kata/core/: challenge.py  (+1 more)
lanes/: registry.json
promptforge/: challenge.py  cli.py  frontier.py  submissions.py
public-results/: current.json
scripts/: run_claude_eval.sh  run_codex_eval.sh  run_python_agent_eval.sh
tests/: test_benchmarks.py  test_characterization_sn60.py  test_cli.py  test_core_round.py  test_envspec_execution.py  test_eval_pack.py  test_frontier.py  test_generic_scorecard_challenge.py  test_king_cache.py  test_lane_state.py  test_live_progress.py  test_llm_review.py  test_oracle.py  test_plugin_dispatch.py  test_provenance.py  test_reporting.py  test_scoring.py  test_screening.py  test_screening_rules.py  test_sn60_bitsec.py  test_sn60_challenge.py  test_sn60_model_relay.py  test_sn60_plugin_round.py  test_submission_system.py  test_submissions.py  test_subnet_plugin_registry.py  test_tee_room.py  test_validator_system.py
(+294 files in other folders)
