[project]
name = "kata"
version = "0.1.0"
description = "Objective coding-agent competition for repo-specific Gittensor repos."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Kata maintainers" }
]
dependencies = [
  # TDX quote verification for sealed-room (TEE) SN60 execution (KATA_SN60_USE_TEE_ROOM).
  "dcap-qvl>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
kata = "kata.interfaces.cli:main"
kata-sn60-model-relay = "kata.validator_system.model_relay:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kata"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["kings", "runs", "submissions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
